--- a/JA.Numerics.Simulation.csproj
+++ b/JA.Numerics.Simulation.csproj
@@ -74,21 +74,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Numerics\Constants.cs" />
+    <Compile Include="Numerics\Simulation\Constants.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Numerics\LinearAlgebra.cs" />
     <Compile Include="Numerics\MatrixShape.cs" />
-    <Compile Include="Numerics\Simulation\ITree.cs" />
+    <Compile Include="Numerics\Simulation\Demo.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Body.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\ChainStates.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Link3.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\MbdSolver.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Mesh.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Polygon.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Scene.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\World3.cs" />
+    <Compile Include="Numerics\Simulation\Tree.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Triangle.cs" />
     <Compile Include="Numerics\Simulation\Spatial\BodyState.cs" />
-    <Compile Include="Numerics\Materials.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\WorldState.cs" />
+    <Compile Include="Numerics\Simulation\Materials.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\MbdStates.cs" />
     <Compile Include="Numerics\UI\Camera.cs" />
     <Compile Include="Numerics\UI\Gdi.cs" />
+    <Compile Include="Numerics\UI\MouseControl.cs" />
     <Compile Include="Numerics\UI\Render3DForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,7 +102,7 @@
       <DependentUpon>Render3DForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Numerics\Simulation\Spatial\Solid.cs" />
-    <Compile Include="Numerics\Units.cs" />
+    <Compile Include="Numerics\Simulation\Units.cs" />
     <Compile Include="Numerics\Vector.cs" />
     <Compile Include="Numerics\Matrix.cs" />
     <Compile Include="Numerics\JaggedMatrixLU.cs" />
@@ -114,8 +120,7 @@
     <Compile Include="Numerics\Simulation\Spatial\JointState.cs" />
     <Compile Include="Numerics\Simulation\Spatial\JointProperties.cs" />
     <Compile Include="Numerics\Simulation\Spatial\FrameKinematics.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Simulation.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\World3.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\ChainSolver.cs" />
     <Compile Include="Numerics\Simulation\Spatial\MassProperties.cs" />
     <Compile Include="Numerics\Matrix3.cs" />
     <Compile Include="Numerics\Matrix33.cs" />
@@ -123,10 +128,16 @@
     <Compile Include="Numerics\Vector33.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
     <None Include="App.config" />
+    <None Include="Numerics\Simulation\Spatial\Spatail.cd" />
     <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
@@ -146,6 +157,64 @@
     <EmbeddedResource Include="Numerics\UI\Render3DForm.resx">
       <DependentUpon>Render3DForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Eject.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Next.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Previous.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Record.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Player Stop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pointer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Printer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Question.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Reduced Size.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Size Horz.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Size Vert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Standby.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Star.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Start.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Target.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
