--- a/JA.Numerics.Simulation.csproj
+++ b/JA.Numerics.Simulation.csproj
@@ -80,20 +80,22 @@
     <Compile Include="Numerics\MatrixShape.cs" />
     <Compile Include="Numerics\Simulation\Demo.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Body.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\Chain.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\ChainStates.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Geometry.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\Link3.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\MbdSolver.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Mesh.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\Chain.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\ChainStates.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry\Circle.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry\LineSegment.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Shape.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\Link3.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\MbdSolver.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry\Mesh.cs" />
     <Compile Include="Numerics\Simulation\Spatial\Object.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Polygon.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry\Polygon.cs" />
     <Compile Include="Numerics\Simulation\Spatial\World3.cs" />
     <Compile Include="Tree.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Triangle.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\BodyState.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Geometry\Triangle.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\BodyState.cs" />
     <Compile Include="Numerics\Simulation\Materials.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\MbdStates.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\MbdStates.cs" />
     <Compile Include="UI\Camera.cs" />
     <Compile Include="UI\Gdi.cs" />
     <Compile Include="UI\MouseControl.cs" />
@@ -103,7 +105,7 @@
     <Compile Include="UI\Render3DForm.Designer.cs">
       <DependentUpon>Render3DForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\Solid.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\Solid.cs" />
     <Compile Include="Numerics\Simulation\Units.cs" />
     <Compile Include="Numerics\Vector.cs" />
     <Compile Include="Numerics\Matrix.cs" />
@@ -119,10 +121,10 @@
     <Compile Include="Numerics\Simulation\Planar\Pose.cs" />
     <Compile Include="Numerics\Simulation\Planar\Simulation.cs" />
     <Compile Include="Numerics\Vector21.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\JointState.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\JointProperties.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\FrameKinematics.cs" />
-    <Compile Include="Numerics\Simulation\Spatial\Solvers\ChainSolver.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\JointState.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\JointProperties.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\FrameKinematics.cs" />
+    <Compile Include="Numerics\Simulation\Spatial\Dynamics\ChainSolver.cs" />
     <Compile Include="Numerics\Simulation\Spatial\MassProperties.cs" />
     <Compile Include="Numerics\Matrix3.cs" />
     <Compile Include="Numerics\Matrix33.cs" />
@@ -217,5 +219,6 @@
   <ItemGroup>
     <None Include="Resources\Target.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
